--- a/package.json
+++ b/package.json
@@ -4,20 +4,47 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js \"test/**/*@(.js|.jsx)\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^2.7.0"
+    "babel-core": "6.5.1",
+    "babel-loader": "6.2.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "chai": "3.5.0",
+    "chai-immutable": "1.5.3",
+    "css-loader": "0.23.1",
+    "jsdom": "8.0.4",
+    "json-loader": "^0.5.7",
+    "mocha": "2.4.5",
+    "postcss-loader": "0.8.1",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "0.13.0",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "autoprefixer": "6.3.3",
+    "classnames": "2.2.3",
+    "immutable": "3.7.6",
+    "object-assign": "4.0.1",
+    "react": "0.14.7",
+    "react-addons-pure-render-mixin": "0.14.7",
+    "react-addons-test-utils": "0.14.7",
+    "react-dom": "0.14.7",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.0",
+    "redux": "3.3.1",
+    "socket.io-client": "1.4.5",
+    "uuid": "2.0.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   }
 }
